fix mobile overflow

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -24,3 +24,16 @@ iframe,
 video {
   max-width: 100%;
 }
+
+html,
+body {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+#root {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
